--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 	<meta charset="UTF-8">
-	<title>Visor EIT - Hitos IGN</title>   
+	<title>Visor EIT - GNSS Red Vertical IGN</title>   
 
 <!--Levantar servidor GeoJSON-->
 <!--python -m http.server 8888-->
